RESOLVED FIXED131615
fix potential truncation in x86assembler
https://bugs.webkit.org/show_bug.cgi?id=131615
Summary fix potential truncation in x86assembler
Alex Christensen
Reported 2014-04-14 07:16:36 PDT
My solution to https://bugs.webkit.org/show_bug.cgi?id=131508 truncates the size_t (which is a 64-bit integer) to an unsigned (which is a 32-bit integer in Windows) before taking the minimum of it an 15, which could lead to truncation problems. Truncating after the call to std::min should fix it.
Attachments
Patch (1.38 KB, patch)
2014-04-14 07:17 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2014-04-14 07:17:35 PDT
Darin Adler
Comment 2 2014-04-14 08:30:12 PDT
Comment on attachment 229281 [details] Patch Yes, this looks better.
WebKit Commit Bot
Comment 3 2014-04-14 09:32:10 PDT
Comment on attachment 229281 [details] Patch Clearing flags on attachment: 229281 Committed r167250: <http://trac.webkit.org/changeset/167250>
WebKit Commit Bot
Comment 4 2014-04-14 09:32:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.