Fixed potential integer truncation. https://bugs.webkit.org/show_bug.cgi?id=131615

Patch by Alex Christensen <achristensen@webkit.org> on 2014-04-14
Reviewed by Darin Adler.

* assembler/X86Assembler.h:
(JSC::X86Assembler::fillNops):
Truncate the size_t to an unsigned after it is limited to 15 instead of before.

Canonical link: https://commits.webkit.org/149692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167250 268f45cc-cd09-0410-ab3c-d52691b4dbfc